--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: Speak Softly
 email: ozydingo@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   A blog about coding awesome, powerful tools...respectfully
-baseurl: "/docs" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "speaksoftly.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: ozydingo
 github_username:  ozydingo
