--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: code@andrewhschwartz.com
 description: > # this means to ignore newlines until "baseurl:"
   Big Stick code development. "The exercise of intelligent forethought and of decisive action sufficiently far in advance of any likely crisis."
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://andrewhschwartz.com" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://www.bigstickcoding.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: ozydingo
 github_username:  ozydingo
 
