--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,8 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://www.bigstickcoding.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: ozydingo
 github_username:  ozydingo
-
+disqus:
+  shortname: big-stick-coding
 # Build settings
 markdown: kramdown
 theme: minima
