--- a/_config.yml
+++ b/_config.yml
@@ -13,10 +13,10 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Speak Softly
+title: A Big Stick
 email: code@andrewhschwartz.com
 description: > # this means to ignore newlines until "baseurl:"
-  Big Stick code development. "The exercise of intelligent forethought and of decisive action sufficiently far in advance of any likely crisis."
+  Speak softly and carry a big stick: "The exercise of intelligent forethought and of decisive action sufficiently far in advance of any likely crisis."
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://www.bigstickcoding.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: ozydingo
